// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixture 'federation/simple-interface-object' > query 'AnotherUsers' > should execute and explain 1`] = `
[
  {
    "data": {
      "anotherUsers": [
        {
          "id": "u1",
          "username": "u1-username",
        },
        {
          "id": "u2",
          "username": "u2-username",
        },
      ],
    },
    "exports": [
      {
        "kind": "scalar",
        "name": "id",
      },
      {
        "kind": "scalar",
        "name": "username",
      },
    ],
    "includes": [
      {
        "data": {
          "_entities": [
            {
              "name": "u1-name",
            },
          ],
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
        ],
        "includes": [],
        "kind": "interface",
        "ofType": "NodeWithName",
        "operation": "query ($id: ID!) {
  _entities(representations: [{__typename: "NodeWithName", id: $id}]) {
    ... on NodeWithName {
      name
    }
  }
}",
        "pathInData": [
          "anotherUsers",
          0,
        ],
        "pathToExportData": [
          "_entities",
          0,
        ],
        "subgraph": "a",
        "type": "[NodeWithName]!",
        "variables": {
          "id": "u1",
        },
      },
      {
        "data": {
          "_entities": [
            {
              "name": "u2-name",
            },
          ],
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
        ],
        "includes": [],
        "kind": "interface",
        "ofType": "NodeWithName",
        "operation": "query ($id: ID!) {
  _entities(representations: [{__typename: "NodeWithName", id: $id}]) {
    ... on NodeWithName {
      name
    }
  }
}",
        "pathInData": [
          "anotherUsers",
          1,
        ],
        "pathToExportData": [
          "_entities",
          0,
        ],
        "subgraph": "a",
        "type": "[NodeWithName]!",
        "variables": {
          "id": "u2",
        },
      },
    ],
    "kind": "interface",
    "ofType": "NodeWithName",
    "operation": "{
  anotherUsers {
    id
    username
  }
}",
    "pathInData": [
      "anotherUsers",
    ],
    "pathToExportData": [
      "anotherUsers",
    ],
    "subgraph": "b",
    "type": "[NodeWithName!]!",
    "variables": {},
  },
]
`;

exports[`fixture 'federation/simple-interface-object' > query 'AnotherUsersWithUserSpread' > should execute and explain 1`] = `
[
  {
    "data": {
      "anotherUsers": [
        {
          "id": "u1",
        },
        {
          "id": "u2",
        },
      ],
    },
    "exports": [
      {
        "kind": "scalar",
        "name": "id",
        "private": true,
      },
    ],
    "includes": [
      {
        "data": {
          "_entities": [
            {
              "age": 11,
            },
          ],
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "age",
          },
        ],
        "includes": [],
        "kind": "object",
        "ofType": "User",
        "operation": "query ($id: ID!) {
  _entities(representations: [{__typename: "User", id: $id}]) {
    ... on User {
      age
    }
  }
}",
        "pathInData": [
          "anotherUsers",
          0,
        ],
        "pathToExportData": [
          "_entities",
          0,
        ],
        "subgraph": "a",
        "type": "[User]!",
        "variables": {
          "id": "u1",
        },
      },
      {
        "data": {
          "_entities": [
            {
              "age": 22,
            },
          ],
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "age",
          },
        ],
        "includes": [],
        "kind": "object",
        "ofType": "User",
        "operation": "query ($id: ID!) {
  _entities(representations: [{__typename: "User", id: $id}]) {
    ... on User {
      age
    }
  }
}",
        "pathInData": [
          "anotherUsers",
          1,
        ],
        "pathToExportData": [
          "_entities",
          0,
        ],
        "subgraph": "a",
        "type": "[User]!",
        "variables": {
          "id": "u2",
        },
      },
    ],
    "kind": "interface",
    "ofType": "NodeWithName",
    "operation": "{
  anotherUsers {
    id
  }
}",
    "pathInData": [
      "anotherUsers",
    ],
    "pathToExportData": [
      "anotherUsers",
    ],
    "subgraph": "b",
    "type": "[NodeWithName!]!",
    "variables": {},
  },
]
`;

exports[`fixture 'federation/simple-interface-object' > query 'UsersWithUsername' > should execute and explain 1`] = `
[
  {
    "data": {
      "users": [
        {
          "id": "u1",
          "name": "u1-name",
        },
        {
          "id": "u2",
          "name": "u2-name",
        },
      ],
    },
    "exports": [
      {
        "kind": "scalar",
        "name": "id",
      },
      {
        "kind": "scalar",
        "name": "name",
      },
    ],
    "includes": [
      {
        "data": {
          "_entities": [
            {
              "username": "u1-username",
            },
          ],
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "username",
          },
        ],
        "includes": [],
        "kind": "interface",
        "ofType": "NodeWithName",
        "operation": "query ($id: ID!) {
  _entities(representations: [{__typename: "NodeWithName", id: $id}]) {
    ... on NodeWithName {
      username
    }
  }
}",
        "pathInData": [
          "users",
          0,
        ],
        "pathToExportData": [
          "_entities",
          0,
        ],
        "subgraph": "b",
        "type": "[NodeWithName]!",
        "variables": {
          "id": "u1",
        },
      },
      {
        "data": {
          "_entities": [
            {
              "username": "u2-username",
            },
          ],
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "username",
          },
        ],
        "includes": [],
        "kind": "interface",
        "ofType": "NodeWithName",
        "operation": "query ($id: ID!) {
  _entities(representations: [{__typename: "NodeWithName", id: $id}]) {
    ... on NodeWithName {
      username
    }
  }
}",
        "pathInData": [
          "users",
          1,
        ],
        "pathToExportData": [
          "_entities",
          0,
        ],
        "subgraph": "b",
        "type": "[NodeWithName]!",
        "variables": {
          "id": "u2",
        },
      },
    ],
    "kind": "interface",
    "ofType": "NodeWithName",
    "operation": "{
  users {
    id
    name
  }
}",
    "pathInData": [
      "users",
    ],
    "pathToExportData": [
      "users",
    ],
    "subgraph": "a",
    "type": "[NodeWithName!]!",
    "variables": {},
  },
]
`;

exports[`fixture 'interfaces' > query 'BasicCat' > should execute and explain 1`] = `
[
  {
    "data": {
      "animal": {
        "meows": true,
        "name": "Cathew",
        "type": "cat",
      },
    },
    "exports": [
      {
        "kind": "scalar",
        "name": "name",
      },
      {
        "kind": "scalar",
        "name": "type",
      },
      {
        "kind": "fragment",
        "selections": [
          {
            "kind": "scalar",
            "name": "meows",
          },
        ],
        "typeCondition": "Cat",
      },
    ],
    "includes": [],
    "kind": "interface",
    "ofType": "Animal",
    "operation": "query animal($name: ID!) {
  animal(name: $name) {
    name
    type
    ... on Cat {
      meows
    }
  }
}",
    "pathInData": [
      "animal",
    ],
    "pathToExportData": [
      "animal",
    ],
    "subgraph": "shelter",
    "type": "Animal",
    "variables": {
      "name": "Cathew",
    },
  },
]
`;

exports[`fixture 'interfaces' > query 'BasicNestedAnimal' > should execute and explain 1`] = `
[
  {
    "data": {
      "animal": {
        "barks": true,
        "bestFriend": {
          "meows": true,
          "name": "Cathew",
        },
        "name": "Dogeth",
        "type": "dog",
      },
    },
    "exports": [
      {
        "kind": "scalar",
        "name": "name",
      },
      {
        "kind": "scalar",
        "name": "type",
      },
      {
        "kind": "fragment",
        "selections": [
          {
            "kind": "scalar",
            "name": "barks",
          },
          {
            "kind": "object",
            "name": "bestFriend",
            "selections": [
              {
                "kind": "fragment",
                "selections": [
                  {
                    "kind": "scalar",
                    "name": "meows",
                  },
                  {
                    "kind": "scalar",
                    "name": "name",
                  },
                ],
                "typeCondition": "Cat",
              },
            ],
          },
        ],
        "typeCondition": "Dog",
      },
    ],
    "includes": [],
    "kind": "interface",
    "ofType": "Animal",
    "operation": "query animal($name: ID!) {
  animal(name: $name) {
    name
    type
    ... on Dog {
      barks
      bestFriend {
        ... on Cat {
          meows
          name
        }
      }
    }
  }
}",
    "pathInData": [
      "animal",
    ],
    "pathToExportData": [
      "animal",
    ],
    "subgraph": "shelter",
    "type": "Animal",
    "variables": {
      "name": "Dogeth",
    },
  },
]
`;

exports[`fixture 'store' > query 'BasicWithFragmentDefinition' > should execute and explain 1`] = `
[
  {
    "data": {
      "storefront": {
        "id": "apple-store",
        "name": "Apple Store",
        "products": [
          {
            "upc": "iphone",
          },
          {
            "upc": "ipad",
          },
        ],
      },
    },
    "exports": [
      {
        "kind": "scalar",
        "name": "id",
      },
      {
        "kind": "object",
        "name": "products",
        "selections": [
          {
            "kind": "scalar",
            "name": "upc",
          },
        ],
      },
      {
        "kind": "scalar",
        "name": "name",
      },
    ],
    "includes": [
      {
        "data": {
          "product": {
            "manufacturer": {
              "id": "apple",
            },
          },
        },
        "exports": [
          {
            "kind": "object",
            "name": "manufacturer",
            "selections": [
              {
                "kind": "scalar",
                "name": "id",
              },
            ],
          },
        ],
        "includes": [],
        "kind": "object",
        "ofType": "Product",
        "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    manufacturer {
      id
    }
  }
}",
        "pathInData": [
          "storefront",
          "products",
          0,
        ],
        "pathToExportData": [
          "product",
        ],
        "subgraph": "products",
        "type": "Product",
        "variables": {
          "Product_upc": "iphone",
        },
      },
      {
        "data": {
          "product": {
            "manufacturer": {
              "id": "apple",
            },
          },
        },
        "exports": [
          {
            "kind": "object",
            "name": "manufacturer",
            "selections": [
              {
                "kind": "scalar",
                "name": "id",
              },
            ],
          },
        ],
        "includes": [],
        "kind": "object",
        "ofType": "Product",
        "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    manufacturer {
      id
    }
  }
}",
        "pathInData": [
          "storefront",
          "products",
          1,
        ],
        "pathToExportData": [
          "product",
        ],
        "subgraph": "products",
        "type": "Product",
        "variables": {
          "Product_upc": "ipad",
        },
      },
    ],
    "kind": "object",
    "ofType": "Storefront",
    "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    id
    products {
      upc
    }
    name
  }
}",
    "pathInData": [
      "storefront",
    ],
    "pathToExportData": [
      "storefront",
    ],
    "subgraph": "storefronts",
    "type": "Storefront",
    "variables": {
      "id": "apple-store",
    },
  },
]
`;

exports[`fixture 'store' > query 'BasicWithInlineFragment' > should execute and explain 1`] = `
[
  {
    "data": {
      "storefront": {
        "id": "samsung-store",
        "name": "Samsung",
        "products": [
          {
            "upc": "tv",
          },
          {
            "upc": "fold",
          },
          {
            "upc": "galaxy",
          },
        ],
      },
    },
    "exports": [
      {
        "kind": "scalar",
        "name": "id",
      },
      {
        "kind": "scalar",
        "name": "name",
      },
      {
        "kind": "object",
        "name": "products",
        "selections": [
          {
            "kind": "scalar",
            "name": "upc",
          },
        ],
      },
    ],
    "includes": [
      {
        "data": {
          "product": {
            "name": "Samsung TV",
          },
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
        ],
        "includes": [],
        "kind": "object",
        "ofType": "Product",
        "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
  }
}",
        "pathInData": [
          "storefront",
          "products",
          0,
        ],
        "pathToExportData": [
          "product",
        ],
        "subgraph": "products",
        "type": "Product",
        "variables": {
          "Product_upc": "tv",
        },
      },
      {
        "data": {
          "product": {
            "name": "Samsung Fold",
          },
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
        ],
        "includes": [],
        "kind": "object",
        "ofType": "Product",
        "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
  }
}",
        "pathInData": [
          "storefront",
          "products",
          1,
        ],
        "pathToExportData": [
          "product",
        ],
        "subgraph": "products",
        "type": "Product",
        "variables": {
          "Product_upc": "fold",
        },
      },
      {
        "data": {
          "product": {
            "name": "Samsung Galaxy",
          },
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
        ],
        "includes": [],
        "kind": "object",
        "ofType": "Product",
        "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
  }
}",
        "pathInData": [
          "storefront",
          "products",
          2,
        ],
        "pathToExportData": [
          "product",
        ],
        "subgraph": "products",
        "type": "Product",
        "variables": {
          "Product_upc": "galaxy",
        },
      },
    ],
    "kind": "object",
    "ofType": "Storefront",
    "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    id
    name
    products {
      upc
    }
  }
}",
    "pathInData": [
      "storefront",
    ],
    "pathToExportData": [
      "storefront",
    ],
    "subgraph": "storefronts",
    "type": "Storefront",
    "variables": {
      "id": "samsung-store",
    },
  },
]
`;

exports[`fixture 'store' > query 'ListOperationResolver' > should execute and explain 1`] = `
[
  {
    "data": {
      "productsByUpcs": [
        {
          "manufacturer": {
            "id": "samsung",
            "products": [
              {
                "name": "Samsung TV",
                "upc": "tv",
              },
              {
                "name": "Samsung Fold",
                "upc": "fold",
              },
              {
                "name": "Samsung Galaxy",
                "upc": "galaxy",
              },
            ],
          },
          "name": "Samsung Galaxy",
          "upc": "galaxy",
        },
        {
          "manufacturer": {
            "id": "apple",
            "products": [
              {
                "name": "Apple iPhone",
                "upc": "iphone",
              },
              {
                "name": "iPad",
                "upc": "ipad",
              },
            ],
          },
          "name": "Apple iPhone",
          "upc": "iphone",
        },
      ],
    },
    "exports": [
      {
        "kind": "scalar",
        "name": "upc",
      },
      {
        "kind": "scalar",
        "name": "name",
      },
      {
        "kind": "object",
        "name": "manufacturer",
        "selections": [
          {
            "kind": "object",
            "name": "products",
            "selections": [
              {
                "kind": "scalar",
                "name": "upc",
              },
              {
                "kind": "scalar",
                "name": "name",
              },
            ],
          },
          {
            "kind": "scalar",
            "name": "id",
            "private": true,
          },
        ],
      },
    ],
    "includes": [
      {
        "data": {
          "manufacturer": {
            "name": "Samsung",
          },
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
        ],
        "includes": [],
        "kind": "object",
        "ofType": "Manufacturer",
        "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    name
  }
}",
        "pathInData": [
          "productsByUpcs",
          0,
          "manufacturer",
        ],
        "pathToExportData": [
          "manufacturer",
        ],
        "subgraph": "manufacturers",
        "type": "Manufacturer",
        "variables": {
          "Manufacturer_id": "samsung",
        },
      },
      {
        "data": {
          "manufacturer": {
            "name": "Apple",
          },
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
        ],
        "includes": [],
        "kind": "object",
        "ofType": "Manufacturer",
        "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    name
  }
}",
        "pathInData": [
          "productsByUpcs",
          1,
          "manufacturer",
        ],
        "pathToExportData": [
          "manufacturer",
        ],
        "subgraph": "manufacturers",
        "type": "Manufacturer",
        "variables": {
          "Manufacturer_id": "apple",
        },
      },
    ],
    "kind": "object",
    "ofType": "Product",
    "operation": "query productsByUpcs($upcs: [ID!]!) {
  productsByUpcs(upcs: $upcs) {
    upc
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
    "pathInData": [
      "productsByUpcs",
    ],
    "pathToExportData": [
      "productsByUpcs",
    ],
    "subgraph": "products",
    "type": "[Product]!",
    "variables": {
      "upcs": [
        "galaxy",
        "iphone",
      ],
    },
  },
]
`;

exports[`fixture 'store' > query 'NotBasicWithInlineVariables' > should execute and explain 1`] = `
[
  {
    "data": {
      "storefront": {
        "id": "samsung-store",
        "name": "Samsung",
        "products": [
          {
            "upc": "tv",
          },
          {
            "upc": "fold",
          },
          {
            "upc": "galaxy",
          },
        ],
      },
    },
    "exports": [
      {
        "kind": "scalar",
        "name": "id",
      },
      {
        "kind": "scalar",
        "name": "name",
      },
      {
        "kind": "object",
        "name": "products",
        "selections": [
          {
            "kind": "scalar",
            "name": "upc",
          },
        ],
      },
    ],
    "includes": [
      {
        "data": {
          "product": {
            "manufacturer": {
              "id": "samsung",
              "products": [
                {
                  "name": "Samsung TV",
                  "upc": "tv",
                },
                {
                  "name": "Samsung Fold",
                  "upc": "fold",
                },
                {
                  "name": "Samsung Galaxy",
                  "upc": "galaxy",
                },
              ],
            },
            "name": "Samsung TV",
          },
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
          {
            "kind": "object",
            "name": "manufacturer",
            "selections": [
              {
                "kind": "object",
                "name": "products",
                "selections": [
                  {
                    "kind": "scalar",
                    "name": "upc",
                  },
                  {
                    "kind": "scalar",
                    "name": "name",
                  },
                ],
              },
              {
                "kind": "scalar",
                "name": "id",
                "private": true,
              },
            ],
          },
        ],
        "includes": [
          {
            "data": {
              "manufacturer": {
                "name": "Samsung",
              },
            },
            "exports": [
              {
                "kind": "scalar",
                "name": "name",
              },
            ],
            "includes": [],
            "kind": "object",
            "ofType": "Manufacturer",
            "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    name
  }
}",
            "pathInData": [
              "storefront",
              "products",
              0,
              "manufacturer",
            ],
            "pathToExportData": [
              "manufacturer",
            ],
            "subgraph": "manufacturers",
            "type": "Manufacturer",
            "variables": {
              "Manufacturer_id": "samsung",
            },
          },
        ],
        "kind": "object",
        "ofType": "Product",
        "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
        "pathInData": [
          "storefront",
          "products",
          0,
        ],
        "pathToExportData": [
          "product",
        ],
        "subgraph": "products",
        "type": "Product",
        "variables": {
          "Product_upc": "tv",
        },
      },
      {
        "data": {
          "product": {
            "manufacturer": {
              "id": "samsung",
              "products": [
                {
                  "name": "Samsung TV",
                  "upc": "tv",
                },
                {
                  "name": "Samsung Fold",
                  "upc": "fold",
                },
                {
                  "name": "Samsung Galaxy",
                  "upc": "galaxy",
                },
              ],
            },
            "name": "Samsung Fold",
          },
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
          {
            "kind": "object",
            "name": "manufacturer",
            "selections": [
              {
                "kind": "object",
                "name": "products",
                "selections": [
                  {
                    "kind": "scalar",
                    "name": "upc",
                  },
                  {
                    "kind": "scalar",
                    "name": "name",
                  },
                ],
              },
              {
                "kind": "scalar",
                "name": "id",
                "private": true,
              },
            ],
          },
        ],
        "includes": [
          {
            "data": {
              "manufacturer": {
                "name": "Samsung",
              },
            },
            "exports": [
              {
                "kind": "scalar",
                "name": "name",
              },
            ],
            "includes": [],
            "kind": "object",
            "ofType": "Manufacturer",
            "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    name
  }
}",
            "pathInData": [
              "storefront",
              "products",
              1,
              "manufacturer",
            ],
            "pathToExportData": [
              "manufacturer",
            ],
            "subgraph": "manufacturers",
            "type": "Manufacturer",
            "variables": {
              "Manufacturer_id": "samsung",
            },
          },
        ],
        "kind": "object",
        "ofType": "Product",
        "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
        "pathInData": [
          "storefront",
          "products",
          1,
        ],
        "pathToExportData": [
          "product",
        ],
        "subgraph": "products",
        "type": "Product",
        "variables": {
          "Product_upc": "fold",
        },
      },
      {
        "data": {
          "product": {
            "manufacturer": {
              "id": "samsung",
              "products": [
                {
                  "name": "Samsung TV",
                  "upc": "tv",
                },
                {
                  "name": "Samsung Fold",
                  "upc": "fold",
                },
                {
                  "name": "Samsung Galaxy",
                  "upc": "galaxy",
                },
              ],
            },
            "name": "Samsung Galaxy",
          },
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
          {
            "kind": "object",
            "name": "manufacturer",
            "selections": [
              {
                "kind": "object",
                "name": "products",
                "selections": [
                  {
                    "kind": "scalar",
                    "name": "upc",
                  },
                  {
                    "kind": "scalar",
                    "name": "name",
                  },
                ],
              },
              {
                "kind": "scalar",
                "name": "id",
                "private": true,
              },
            ],
          },
        ],
        "includes": [
          {
            "data": {
              "manufacturer": {
                "name": "Samsung",
              },
            },
            "exports": [
              {
                "kind": "scalar",
                "name": "name",
              },
            ],
            "includes": [],
            "kind": "object",
            "ofType": "Manufacturer",
            "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    name
  }
}",
            "pathInData": [
              "storefront",
              "products",
              2,
              "manufacturer",
            ],
            "pathToExportData": [
              "manufacturer",
            ],
            "subgraph": "manufacturers",
            "type": "Manufacturer",
            "variables": {
              "Manufacturer_id": "samsung",
            },
          },
        ],
        "kind": "object",
        "ofType": "Product",
        "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
        "pathInData": [
          "storefront",
          "products",
          2,
        ],
        "pathToExportData": [
          "product",
        ],
        "subgraph": "products",
        "type": "Product",
        "variables": {
          "Product_upc": "galaxy",
        },
      },
    ],
    "kind": "object",
    "ofType": "Storefront",
    "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    id
    name
    products {
      upc
    }
  }
}",
    "pathInData": [
      "storefront",
    ],
    "pathToExportData": [
      "storefront",
    ],
    "subgraph": "storefronts",
    "type": "Storefront",
    "variables": {
      "id": "samsung-store",
    },
  },
]
`;

exports[`fixture 'store' > query 'NotBasicWithOperationVariables' > should execute and explain 1`] = `
[
  {
    "data": {
      "storefront": {
        "id": "apple-store",
        "name": "Apple Store",
        "products": [
          {
            "upc": "iphone",
          },
          {
            "upc": "ipad",
          },
        ],
      },
    },
    "exports": [
      {
        "kind": "scalar",
        "name": "id",
      },
      {
        "kind": "scalar",
        "name": "name",
      },
      {
        "kind": "object",
        "name": "products",
        "selections": [
          {
            "kind": "scalar",
            "name": "upc",
          },
        ],
      },
    ],
    "includes": [
      {
        "data": {
          "product": {
            "manufacturer": {
              "id": "apple",
              "products": [
                {
                  "name": "Apple iPhone",
                  "upc": "iphone",
                },
                {
                  "name": "iPad",
                  "upc": "ipad",
                },
              ],
            },
            "name": "Apple iPhone",
          },
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
          {
            "kind": "object",
            "name": "manufacturer",
            "selections": [
              {
                "kind": "object",
                "name": "products",
                "selections": [
                  {
                    "kind": "scalar",
                    "name": "upc",
                  },
                  {
                    "kind": "scalar",
                    "name": "name",
                  },
                ],
              },
              {
                "kind": "scalar",
                "name": "id",
                "private": true,
              },
            ],
          },
        ],
        "includes": [
          {
            "data": {
              "manufacturer": {
                "name": "Apple",
              },
            },
            "exports": [
              {
                "kind": "scalar",
                "name": "name",
              },
            ],
            "includes": [],
            "kind": "object",
            "ofType": "Manufacturer",
            "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    name
  }
}",
            "pathInData": [
              "storefront",
              "products",
              0,
              "manufacturer",
            ],
            "pathToExportData": [
              "manufacturer",
            ],
            "subgraph": "manufacturers",
            "type": "Manufacturer",
            "variables": {
              "Manufacturer_id": "apple",
            },
          },
        ],
        "kind": "object",
        "ofType": "Product",
        "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
        "pathInData": [
          "storefront",
          "products",
          0,
        ],
        "pathToExportData": [
          "product",
        ],
        "subgraph": "products",
        "type": "Product",
        "variables": {
          "Product_upc": "iphone",
        },
      },
      {
        "data": {
          "product": {
            "manufacturer": {
              "id": "apple",
              "products": [
                {
                  "name": "Apple iPhone",
                  "upc": "iphone",
                },
                {
                  "name": "iPad",
                  "upc": "ipad",
                },
              ],
            },
            "name": "iPad",
          },
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
          {
            "kind": "object",
            "name": "manufacturer",
            "selections": [
              {
                "kind": "object",
                "name": "products",
                "selections": [
                  {
                    "kind": "scalar",
                    "name": "upc",
                  },
                  {
                    "kind": "scalar",
                    "name": "name",
                  },
                ],
              },
              {
                "kind": "scalar",
                "name": "id",
                "private": true,
              },
            ],
          },
        ],
        "includes": [
          {
            "data": {
              "manufacturer": {
                "name": "Apple",
              },
            },
            "exports": [
              {
                "kind": "scalar",
                "name": "name",
              },
            ],
            "includes": [],
            "kind": "object",
            "ofType": "Manufacturer",
            "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    name
  }
}",
            "pathInData": [
              "storefront",
              "products",
              1,
              "manufacturer",
            ],
            "pathToExportData": [
              "manufacturer",
            ],
            "subgraph": "manufacturers",
            "type": "Manufacturer",
            "variables": {
              "Manufacturer_id": "apple",
            },
          },
        ],
        "kind": "object",
        "ofType": "Product",
        "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
        "pathInData": [
          "storefront",
          "products",
          1,
        ],
        "pathToExportData": [
          "product",
        ],
        "subgraph": "products",
        "type": "Product",
        "variables": {
          "Product_upc": "ipad",
        },
      },
    ],
    "kind": "object",
    "ofType": "Storefront",
    "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    id
    name
    products {
      upc
    }
  }
}",
    "pathInData": [
      "storefront",
    ],
    "pathToExportData": [
      "storefront",
    ],
    "subgraph": "storefronts",
    "type": "Storefront",
    "variables": {
      "id": "apple-store",
    },
  },
]
`;

exports[`fixture 'store' > query 'ScalarListInOperation' > should execute and explain 1`] = `
[
  {
    "data": {
      "productNames": [
        "Samsung TV",
        "Samsung Fold",
        "Samsung Galaxy",
        "Apple iPhone",
        "iPad",
      ],
    },
    "kind": "scalar",
    "ofType": "String",
    "operation": "query productNames {
  productNames
}",
    "pathInData": [
      "productNames",
    ],
    "pathToExportData": [
      "productNames",
    ],
    "subgraph": "products",
    "type": "[String!]!",
    "variables": {},
  },
]
`;

exports[`fixture 'store' > query 'ScalarListInType' > should execute and explain 1`] = `
[
  {
    "data": {
      "storefront": {
        "productNames": [
          "Apple iPhone",
          "iPad",
        ],
      },
    },
    "exports": [
      {
        "kind": "scalar",
        "name": "productNames",
      },
    ],
    "includes": [],
    "kind": "object",
    "ofType": "Storefront",
    "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    productNames
  }
}",
    "pathInData": [
      "storefront",
    ],
    "pathToExportData": [
      "storefront",
    ],
    "subgraph": "storefronts",
    "type": "Storefront",
    "variables": {
      "id": "apple-store",
    },
  },
]
`;

exports[`fixture 'store' > query 'ScalarOperationField' > should execute and explain 1`] = `
[
  {
    "data": {
      "manufacturerName": "Samsung",
    },
    "kind": "scalar",
    "ofType": "String",
    "operation": "query manufacturerName($id: ID!) {
  manufacturerName(id: $id)
}",
    "pathInData": [
      "manufacturerName",
    ],
    "pathToExportData": [
      "manufacturerName",
    ],
    "subgraph": "manufacturers",
    "type": "String",
    "variables": {
      "id": "samsung",
    },
  },
]
`;

exports[`fixture 'store' > query 'ScalarOperationFieldNested' > should execute and explain 1`] = `
[
  {
    "data": {
      "product": {
        "name": "iPad",
      },
    },
    "kind": "scalar",
    "ofType": "String",
    "operation": "query productName($upc: ID!) {
  product(upc: $upc) {
    name
  }
}",
    "pathInData": [
      "productName",
    ],
    "pathToExportData": [
      "product",
      "name",
    ],
    "subgraph": "products",
    "type": "String",
    "variables": {
      "upc": "ipad",
    },
  },
]
`;
